# QT_TEST

./: .gitignore  CMakeLists.txt  README.md  app_icon.rc  build_project.bat  download_python_runtime.bat  resources.qrc  run_timeout_test.py  test_timeout_cli.cpp
.claude/: settings.local.json
.github/workflows/: build.yml
.serena/: project.yml
.serena/cache/cpp/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: PHASE_3_DESIGN.md  PROJECT_RELEASE_READY.md  code_block_language_selector.md  enhanced_preview_implementation.md  final_project_summary.md  final_release_process_and_limitations.md  markdown_toolbar_feature.md  phase2_implementation.md  phase3_implementation_details.md  phase3_packaging_deployment.md  project_overview.md  project_status.md  security_audit_fixes.md  style_conventions.md  suggested_commands.md  task_completion.md  ui_redesign_sidebar.md
docs/: DEPLOYMENT_OPTIMIZATION.md  PHASE1_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PROJECT_INIT_SCHEMA.md  QUICK_START.md  RELEASE_STATUS.md
include/: MainWindow.h  MarkdownEditor.h  SettingsManager.h
python/: test_embedded.py  test_timeout.py  weather_service.py  weather_service_test.py
resources/styles/: dark.qss  light.qss
scripts/: update_project_tree.ps1
src/: MainWindow.cpp  MarkdownEditor.cpp  SettingsManager.cpp
